--- a/index.html
+++ b/index.html
@@ -2,12 +2,19 @@
 <html lang="en">
 
 <head>
-welcome to my page
-</head>
- 
-<body>
-this is a demo server
 
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>  welcome to my page</title>
+</head>
+
+<body>
+
+    <h1>Take </h1>
+    <h2>a </h2>
+    <h3>Seat</h3>
+    #Roland is here to help
 </body>
 
 </html>
