--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Altschool assignment</title>
+    <title>Demo Portfoloi</title>
 </head> 
 <body>
   <nav class="navbar">
@@ -29,7 +29,7 @@
     <p>My enthusiasm for DevOps is fueled by its potential to streamline the software development and deployment processes by utilizing automation, testing, and continuous integration and delivery. </p>
     <p>My goal is to deliver reliable, scalable, and secure cloud solutions to meet business needs and contribute to the success of a company.</p>
     
-    <p><strong>Education</strong></p>
+    <p><strong>EDUCATION</strong></p>
     <em><strong> Covenant University of Ogun state</strong></em>
     <p>B.Eng Information and Comunication Engineering</p>
     <em><strong>Altschool Africa</strong></em>
@@ -42,7 +42,7 @@
       <h1>Projects</h1>
     
     </header>
-    <div id="projects">
+    <div id="PROJECTS">
     <ul>
       <ol>
       <li><a href="https://github.com/rolandeni/altschool-cloud-exercises-/tree/main/ex7">Hourly Memory Usage Monitoring Script</a></li>
