--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <nav class="navbar">
     <div><a href="#">About</a> </div>                 
-    <div><a href="rolanduk.re@gmail.com">Send a mail </a></div>
+    <div><a href="mailto:rolanduk.re@gmail.com">Send a mail </a></div>
     <div><a href="https://github.com/rolandeni">Github</a></div>
     <div> <a class="CV" href="https://drive.google.com/file/d/1hPPJuCdXybbjwdr3SF__PmATPh3FpySi/view?usp=sharing">CV</a></div>
     <div> <a href="#projects">Projects</a></div>
