--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
       <h1>Projects</h1>
     
     </header>
-    <div id="projects">
-    <ul>
+    <div id="Some Projects">
+    
       <ol>
       <li><a href="https://github.com/rolandeni/altschool-cloud-exercises-/tree/main/ex7">Hourly Memory Usage Monitoring Script</a></li>
       <li><a href="https://github.com/rolandeni/Ansible-for-AWS.git">dAdvanced deployment of servers to host laravel on AWS using ansible to setup all services</a></li>
@@ -51,9 +51,10 @@
       <li><a href="https://github.com/rolandeni/AWS-challenge-with-VPC">Dynamic Load Balancing and Web Server Deployment on AWS using Nginx</a></li>
       <li><a href="https://github.com/rolandeni/Terraform-project1-.git">implement ELB, ASG on web servers using Terraform and Ansible </a></li>
       <li><a href="https://github.com/rolandeni/LaravelDocker.git">Dockerizing a Laravel Application with Real-Time Logging</a></li>
-      <!-- <li><a href="https://github.com/Olive-harobed/K8S_DOCKER_PROJECT">Portfolio Website Deployment on Docker Registry and EKS cluster</a></li>
-    </ul> -->
+      <li><a href="https://github.com/rolandeni">Deployment of Kubbernetes cluster on GCP using custom docker image from Docker Registry </a></li>
+  
       </ol>
+
   <div>
   </div>
 </section>
