--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <h1>Projects</h1>
     
     </header>
-    <div id="Some Projects">
+    <div id="Some projects">
     
       <ol>
       <li><a href="https://github.com/rolandeni/altschool-cloud-exercises-/tree/main/ex7">Hourly Memory Usage Monitoring Script</a></li>
