--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     
       <ol>
       <li><a href="https://github.com/rolandeni/altschool-cloud-exercises-/tree/main/ex7">Hourly Memory Usage Monitoring Script</a></li>
-      <li><a href="https://github.com/rolandeni/Ansible-for-AWS.git">dAdvanced deployment of servers to host laravel on AWS using ansible to setup all services</a></li>
+      <li><a href="https://github.com/rolandeni/Ansible-for-AWS.git">Advanced webserver deployment of laravel, hosted on AWS using IAC to setup all services</a></li>
     
       <li><a href="https://github.com/rolandeni/AWS-challenge-with-VPC">Dynamic Load Balancing and Web Server Deployment on AWS using Nginx</a></li>
       <li><a href="https://github.com/rolandeni/Terraform-project1-.git">implement ELB, ASG on web servers using Terraform and Ansible </a></li>
