--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <div id="Some projects">
     
       <ol>
-      <li><a href="https://github.com/rolandeni/altschool-cloud-exercises-/tree/main/ex7">Hourly Memory Usage Monitoring Script</a></li>
+      <li><a href="https://github.com/rolandeni/altschool-cloud-exercises-/tree/main/ex7"> Memory Usage and Monitoring using Crontab</a></li>
       <li><a href="https://github.com/rolandeni/Ansible-for-AWS.git">Advanced webserver deployment of laravel, hosted on AWS using IAC to setup all services</a></li>
     
       <li><a href="https://github.com/rolandeni/AWS-challenge-with-VPC">Dynamic Load Balancing and Web Server Deployment on AWS using Nginx</a></li>
