--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
     <p>My goal is to deliver reliable, scalable, and secure cloud solutions to meet business needs and contribute to the success of a company.</p>
     
     <p><strong>Education</strong></p>
-    <em><strong> Covenant University of Ogun state</strong></em>
-    <p>B.Eng Information and Comunication Engineering</p>
-    <em><strong>Altschool Africa</strong></em>
-    <p>Diploma in Cloud Engineering</p>
+    <em>Covenant University of Ogun state</em>
+    <p><strong> Information and Comunication Engineer(Bachelor) </strong></p>
+    <em>Altschool Africa</em>
+    <p></strong>Cloud Engineer Diploma</strong></p>
   </div>
 
   
