--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
     <p>My goal is to deliver reliable, scalable, and secure cloud solutions to meet business needs and contribute to the success of a company.</p>
     
     <p><strong>Education</strong></p>
-    <em>Covenant University of Ogun state</em>
+    <em>Covenant University </em>
     <p><strong> Information and Comunication Engineer(Bachelor) </strong></p>
     <em>Altschool Africa</em>
-    <p></strong>Cloud Engineer Diploma</strong></p>
+    <p><strong>Cloud Engineer (Diploma) </strong></p>
   </div>
 
   
