--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div><a href="#">About</a> </div>                 
     <div><a href="rolanduk.re@gmail.com">Send a mail </a></div>
     <div><a href="https://github.com/rolandeni">Github</a></div>
-    <div> <a class="CV" href="https://drive.google.com/file/d/1hPPJuCdXybbjwdr3SF__PmATPh3FpySi/view?usp=sharing">CV</a></div>
+    <div> <a class="CV" href="https://drive.google.com/file/d/1mrvPmRD2rPSmB8YSKBp--JpYYjv062h5/view?usp=drivesdk">CV</a></div>
     <div> <a href="#projects">Projects</a></div>
   </nav>
   
