--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
       <li><a href="https://github.com/rolandeni/Terraform-project1-.git">implement ELB, ASG on web servers using Terraform and Ansible </a></li>
       <li><a href="https://github.com/rolandeni/LaravelDocker.git">Dockerizing a Laravel Application with Real-Time Logging</a></li>
       <li><a href="https://github.com/rolandeni">Deployment of Kubbernetes cluster on GCP using custom docker image from Docker Registry </a></li>
+      <li><a href="https://github.com/rolandeni/terraform-Exam">Terraform with CICD Pipeline deployment of Kubbernetes cluster and docker image from Docker Registry </a></li>
   
       </ol>
 
