--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
         <img src="assets/img/1profile-img.jpg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Roland Eni</a></h1>
         <div class="social-links mt-3 text-center">
-          <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
+          <a href="https://twitter.com/roland_eni" class="twitter"><i class="bx bxl-twitter"></i></a>
 
-          <a href="#" class="Github"><i class="bx bxl-github"></i></a>
-          <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <a href="https://github.com/rolandeni" class="Github"><i class="bx bxl-github"></i></a>
+          <a href="https://www.linkedin.com/in/roland-eni" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         </div>
       </div>
 
@@ -59,9 +59,9 @@
         <ul>
           <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
           <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
-          <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
-          <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
-          <li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Services</span></a></li>
+          <li><a href="https://drive.google.com/file/d/1mrvPmRD2rPSmB8YSKBp--JpYYjv062h5/view?usp=drivesdk" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
+          <li><a href="https://github.com/rolandeni" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
+          <li><a href="https://www.linkedin.com/in/roland-eni" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Services</span></a></li>
           <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
         </ul>
       </nav><!-- .nav-menu -->
@@ -85,7 +85,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>i am a cloud DevOps Engineer proficient in deploying and maintaining cloud infrastructure using AWS and GCP. Skilled in automating, deploying and testing processes using tools such as Ansible, Terraform and Jenkins. Strong understanding of agile methodologies and a passion for continuous improvement. Seeking a role where I can utilize my skills and knowledge to contribute to the success of a team/ company. Having a Bachelor of Engineering in Information and Communications, a problem solving personality, confident and an innovative fast learner, makes me an asset in the work environment.</div>
+          <p>i am a cloud DevOps Engineer proficient in deploying and maintaining cloud infrastructure using AWS and GCP. Skilled in automating, deploying and testing processes using tools such as Ansible, Terraform and Jenkins. Strong understanding of Linux Systems and agile methodologies and a passion for continuous improvement. Seeking a role where I can utilize my skills and knowledge to contribute to the success of a team/ company. Having a Bachelor of Engineering in Information and Communications, a problem solving personality, confident and an innovative fast learner, makes me an asset in the work environment.</div>
 
         <div class="row">
           <div class="col-lg-4" data-aos="fade-right">
