--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Portfolio</h2>
+          <h2>Projects</h2>
           <p> you can check out some projects i carried out  in my github repository. lick the menu to see my gitHub repo link </div>
 
         <div class="row" data-aos="fade-up">
